<resources>
    <string name="app_name">SLLKapture\nDataset</string>

    <string name="start">start</string>
    <string name="alert_change_menu">You should stop collecting.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="main_log_collect_info">Number of data collected</string>

    <!-- Preference Titles -->
    <string name="setting_title_app">App Setting</string>
    <string name="setting_title_arcore">ArCore Setting</string>
    <string name="setting_title_sensors">Sensor Setting</string>

    <!-- Messages Preferences -->
    <string name="app_server">Server Url</string>
    <string name="app_log">Show Log View </string>

    <string name="arcore_depth">Show Depth View</string>
    <string name="arcore_pcd_confidence">Point cloud confidence</string>
    <string name="arcore_pcd_confidence_info">Removes data outside the confidence interval.\n The confidence interval is 0 to 1</string>
    <string name="arcore_pcd_confidence_error_01">Write float number. 0 to 1</string>

    <string name="sensor_gnss">Collect Gnss</string>
    <string name="sensor_lidar">Collect Lidar</string>
    <string name="sensor_depth">Collect Depth</string>
    <string name="sensor_wifi">Collect WiFi</string>
    <string name="sensor_ble">Collect Bluetooth</string>
    <string name="sensor_accel">Collect Accelerometer</string>
    <string name="sensor_gyro">Collect Gyroscope</string>
    <string name="sensor_mag">Collect Magnetic</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>