<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_title_app">

        <SwitchPreferenceCompat
            app:key="setting.show.log"
            app:title="@string/app_log" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_title_arcore">

        <SwitchPreferenceCompat
            app:key="setting.kapture.depth"
            app:title="@string/arcore_depth" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_title_sensors">

        <CheckBoxPreference
            app:key="setting.kapture.gnss"
            app:title="@string/sensor_gnss"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="setting.kapture.lidar"
            app:title="@string/sensor_lidar"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="setting.kapture.wifi"
            app:title="@string/sensor_wifi"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="setting.kapture.bluetooth"
            app:title="@string/sensor_ble"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="setting.kapture.accelerometer"
            app:title="@string/sensor_accel"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="setting.kapture.gyroscope"
            app:title="@string/sensor_gyro"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="setting.kapture.magetic"
            app:title="@string/sensor_mag"
            app:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>